overlay resolved and ufos with no overlap

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -4,13 +4,7 @@ h1 {
   color:white;
 }
 
-br {
-  line-height: 2%;
-}
 
-.we-pp-wrapper{
-  background color: red;
-}
 #earth_div{
   position:relative;
   margin-left:auto;
@@ -19,13 +13,13 @@ br {
   z-index: 0;
 }
 
-/*.earth_overlay{
+.earth_overlay{
   position: absolute;
-  top:120px;
+  top:50px;
   width: 1200px;
   height: 300px;
   overflow:visible;
-  pointer-events none;
+  pointer-events: none;
   margin-right:0;
   padding-top:100px;
   padding-bottom: 270px;
@@ -34,35 +28,35 @@ br {
   text-align: center;
   z-index: 2;
   background-image: url("http://i.imgur.com/VXcVUTX.png");
-}*/
+  }
 
-.button {
-  width:80px;
-  height: 10px;
-  display: inline-block;
-  padding: 15px 10px;
-  margin:10px;
-  margin-top:20px;
-  margin-bottom:10px;
-  margin-left:140px;
-  font-size: 18px;
-  cursor: pointer;
-  text-decoration: none;
-  outline: bold;
-  color: #369ECC;
-  background-color: #4CAF50;
-  border: none;
-  border-radius: 5px;
-  background-image: url("http://i.imgur.com/VXcVUTX.png")
-  /*box-shadow: 0 9px #999;*/
-}
+  .button {
+    width:80px;
+    height: 10px;
+    display: inline-block;
+    padding: 15px 10px;
+    margin:10px;
+    margin-top:20px;
+    margin-bottom:9px;
+    margin-left:140px;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
+    outline: bold;
+    color: #369ECC;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    background-image: url("http://i.imgur.com/VXcVUTX.png")
+    /*box-shadow: 0 9px #999;*/
+  }
 
-.button:hover {background-color: #3e8e41}
+  .button:hover {background-color: #3e8e41}
 
-.button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+  .button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
   }
 
 
@@ -73,14 +67,13 @@ br {
     padding-top: 5px;
     padding: 15px 10px;
     margin:9px;
-    margin-top:5px;
-    margin-bottom:30px;
+    margin-top:4px;
+    margin-bottom:20px;
     margin-left:889px;
     margin-right:30px;
     font-size: 18px;
     cursor: pointer;
     text-decoration: none;
-    outline: bold;
     color: #369ECC;
     background-color: #369ECC;
     border: none;
@@ -88,50 +81,42 @@ br {
     background-image: url("aliensmall.png")
 
   }
-  .pic:hover {background-image: url("aliensmallclick.png")}
 
-#footer{
-  position: relative;
-  display:flex;
-  height: 130px; 
-  width: 1230px; 
-  padding: 10px; 
-  background-color: #575757; 
-  border-radius: 0px; 
-  margin-right: auto;
-  margin-left: auto;
-  top: 0px; 
-  left: 0px; 
-  background-image: url("lowerdashbar.png")
-}
+  #footer{
+    position: relative;
+    display:flex;
+    height: 130px; 
+    width: 1230px; 
+    padding: 10px; 
+    background-color: #575757; 
+    border-radius: 0px; 
+    margin-right: auto;
+    margin-left: auto;
+    top: 0px; 
+    left: 0px; 
+    background-image: url("lowerdashbar.png")
+  }
 
-#oval {
-  width: 200px;
-  height: 100px;
-  background: #428BCA;
-  -moz-border-radius: 100px / 50px;
-  -webkit-border-radius: 100px / 50px;
-  border-radius: 30px / 50px;
-  left:200px;
-  padding-left: 1000px;
-  background-image: url("scifidash.jpg")
-
-}
-
-/*#right {
-  width: 100px;
-  height: 100px;
-  background: #428BCA;
-  -moz-border-radius: 100px / 50px;
-  -webkit-border-radius: 100px / 50px;
-  border-radius: 10px / 50px;
-  transform:rotate(180deg);
-  float:right;
-  z-index: 2;
-}*/
-
-body {
-  background-color: black;
+  #oval {
+    margin-left: auto;
+    overflow: hidden;
+    margin-right: auto;
+    width: 200px;
+    height: 100px;
+    background: #428BCA;
+    -moz-border-radius: 100px / 50px;
+    -webkit-border-radius: 100px / 50px;
+    border-radius: 30px / 50px;
+    left:200px;
+    padding-left: 1000px;
+    background-image: url("scifidash.jpg")
+  }
 
 
-}
+
+
+  body {
+    background-color: black;
+
+
+  }
